# terminal-arcade

./: .gitignore  Cargo.toml  README.md  build.rs  copy-assets.sh  package-lock.json  rustfmt.toml
.github/workflows/: ci.yaml
assets/: README.md
assets/banners/: logo.txt
src/: action.rs  app.rs  cli.rs  components.rs  config.rs  event.rs  lib.rs  log.rs  main.rs  mode.rs  panic.rs  tui.rs  util.rs  utils.rs
src/components/: fps.rs  home.rs  mod.rs
src/components/screens/: home.rs  mod.rs
src/components/screens/home/: banner.rs  mod.rs
src/components/widgets/: blocks.rs  mod.rs
src/core/: handler.rs  mod.rs  outcomes.rs  terminal.rs
src/events/: app.rs  input.rs  mod.rs  screen.rs  tui.rs  ui.rs  util.rs
src/game/: authors.rs  mod.rs
src/game/minesweeper/: mod.rs
src/games/: mod.rs
src/games/minesweeper/: mod.rs
src/screens/: mod.rs  util.rs  welcome.rs
src/service/: dirs.rs  errors.rs  log.rs  mod.rs  panic.rs
src/services/: dirs.rs  files.rs  log.rs  mod.rs  oops.rs
src/ui/: color_scheme.rs  mod.rs  screen.rs  util.rs  widget.rs
src/ui/components/: flicker_counter.rs  gsc.rs  mod.rs  presets.rs  screen_base_block.rs  scroll_tracker.rs  scrollable_list.rs  search_results.rs  search_section.rs  text_input_bar.rs  uc.rs  ui_presets.rs  under_construction.rs  wcl.rs  welcome_controls_list.rs
src/ui/components/game_select/: mod.rs  search_bottom_bar.rs  search_results.rs  search_section.rs
src/ui/components/games/: mod.rs  setup.rs
src/ui/components/games/minesweeper/: mod.rs
src/ui/components/welcome/: controls.rs  datetime_indicator.rs  footer.rs  info_footer.rs  mod.rs  welcome_bottom_bar.rs  welcome_controls_list.rs
src/ui/screen/: handler.rs  metadata.rs  mod.rs  state.rs
src/ui/screens/: config.rs  controls_popup.rs  game_select.rs  handle.rs  handler.rs  mod.rs  state.rs  welcome.rs
src/ui/screens/games/: mod.rs
src/ui/screens/games/minesweeper/: board_setup.rs  minesweeper_game.rs  minesweeper_setup_screen.rs  mod.rs
src/ui/widgets/: mod.rs  scrollable_list.rs  text_input_bar.rs
src/ui/widgets/utils/: controls_table.rs  flicker_counter.rs  mod.rs  scroll_tracker.rs
src/util/: dirs.rs  log.rs  mod.rs  panic.rs
src/utils/: mod.rs  unbounded_channel.rs
