[package]
name = "terminal-arcade"
version = "0.0.1"
authors = ["Ramen Developer <ramendev2009@gmail.com>"]
edition = "2021"
description = "Terminal-based arcade-style games for when you're bored out of your mind."
readme = "README.md"
repository = "https://github.com/developer-ramen/terminal-arcade"
license = "MIT"
keywords = ["arcade", "terminal", "games"]
categories = ["games"]
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
better-panic = "0.3.0"
color-eyre = "0.6.3"
human-panic = "2.0.0"
lazy_static = "1.5.0"
libc = "0.2.155"
log = "0.4.22"
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.61"

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.3.1", features = [
    "build",
    "cargo",
    "git",
    "gitoxide",
    "rustc",
    "si",
] }
