[package]
name = "terminal-arcade"
version = "0.0.1"
authors = ["Ramen Developer <ramendev2009@gmail.com>"]
edition = "2021"
description = "Terminal-based arcade-style games for when you're bored out of your mind."
readme = "README.md"
repository = "https://github.com/developer-ramen/terminal-arcade"
license = "MIT"
keywords = ["arcade", "terminal", "games"]
categories = ["games"]
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
better-panic = "0.3.0"
color-eyre = "0.6.3"
config = "=0.13.4"
crossterm = { version = "0.27.0", features = ["event-stream"] }
derive-new = "0.6.0"
derive_builder = "0.20.1"
directories = "5.0.1"
either = "1.13.0"
futures = "0.3.30"
human-panic = "2.0.0"
lazy_static = "1.5.0"
libc = "0.2.155"
ratatui = { version = "0.27.0", features = [
    "all-widgets",
    "macros",
    "unstable",
    "crossterm",
    "palette",
] }
ratatui-macros = "0.4.3"
serde = { version = "1.0.204", features = ["derive", "rc"] }
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
thiserror = "1.0.63"
time = { version = "0.3.36", features = [
    "formatting",
    "parsing",
    "local-offset",
    "serde",
] }
tokio = { version = "1.39.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7.11", features = ["full", "tracing"] }
toml = "0.8.15"
tracing = { version = "0.1.40", features = ["async-await", "log"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "env-filter",
    "fmt",
    "local-time",
    "time",
] }
typetag = "0.2.18"

[build-dependencies]
vergen-gix = { version = "1.0.0", features = ["build", "cargo", "rustc", "si"] }
